--- a/src/pages/styles.css
+++ b/src/pages/styles.css
@@ -1,3 +1,11 @@
+body {
+  font-family: "DM Sans", sans-serif;
+}
+
+option {
+  color: black;
+}
+
 @font-face {
   font-family: 'DM Sans';
   font-style: italic;
